# voidconf

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: err.rs  lib.rs
