[package]
name = "voidconf"
description = "Config management for dummies like me."
version = "0.0.1"
edition = "2021"
license = "Unlicense"
authors = ["Alex Mullen <alex@xela.foo>"]
categories = ["config"]
keywords = ["config", "environment"]
readme = "README.md"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
miette = "7.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
